feat: 更新Jupyter笔记本中的查询语言为中文
将工具调用示例中的查询内容从英文更新为中文，以提高可读性和用户体验。

--- a/features/tool.ipynb
+++ b/features/tool.ipynb
@@ -304,7 +304,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "query = \"what is 11 + 49? What is 3 * 12? \"\n",
+    "query = \"11 + 49等于几? 3 * 12等于几?\"\n",
     "output = llm_with_tools.invoke(query).tool_calls"
    ]
   },
